[package]
name = "sstr"
description = "stupid simple task runner"
version = "0.1.0"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/sstr"
repository = "https://github.com/EthanJustice/sstr"
license = "MIT"
publish = false

[dependencies]
serde = "~1.0.117"
serde_json = "~1.0.59"

clap = { version = "~2.33.3", features = ["suggestions"] }

notify = "~4.0.15"